--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MyCheckedItemActivity"></activity>
+        <activity android:name=".ui.MyCheckedItemActivity"
+            android:screenOrientation="portrait"
+            ></activity>
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
